--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,11 +10,17 @@
 }
 
 :root {
-  --blue: #2a2185;
+  /* --primary-color: #2a2185; */
   --white: #fff;
   --gray: #f5f5f5;
   --black1: #222;
   --black2: #999;
+  --primary-color: #FF5722;
+  --secondary-color: #FF7043;
+  --light-color: #FFF3E0;
+  --dark-color: #333333;
+  --white: #FFFFFF;
+  --gray: #F5F5F5;
 }
 
 body {
@@ -32,8 +38,8 @@ body {
   position: fixed;
   width: 300px;
   height: 100%;
-  background: var(--blue);
-  border-left: 10px solid var(--blue);
+  background: var(--primary-color);
+  border-left: 10px solid var(--primary-color);
   transition: 0.5s;
   overflow: hidden;
 }
@@ -76,7 +82,7 @@ body {
 }
 .navigation ul li:hover a,
 .navigation ul li.hovered a {
-  color: var(--blue);
+  color: var(--primary-color);
 }
 
 .navigation ul li a .icon {
@@ -235,7 +241,7 @@ body {
   position: relative;
   font-weight: 500;
   font-size: 2.5rem;
-  color: var(--blue);
+  color: var(--primary-color);
 }
 
 .cardBox .card .cardName {
@@ -250,7 +256,7 @@ body {
 }
 
 .cardBox .card:hover {
-  background: var(--blue);
+  background: var(--primary-color);
 }
 .cardBox .card:hover .numbers,
 .cardBox .card:hover .cardName,
@@ -286,12 +292,12 @@ body {
 }
 .cardHeader h2 {
   font-weight: 600;
-  color: var(--blue);
+  color: var(--primary-color);
 }
 .cardHeader .btn {
   position: relative;
   padding: 5px 10px;
-  background: var(--blue);
+  background: var(--primary-color);
   text-decoration: none;
   color: var(--white);
   border-radius: 6px;
@@ -313,7 +319,7 @@ body {
   border-bottom: none;
 }
 .details .recentOrders table tbody tr:hover {
-  background: var(--blue);
+  background: var(--primary-color);
   color: var(--white);
 }
 .details .recentOrders table tr td {
@@ -398,7 +404,7 @@ body {
   color: var(--black2);
 }
 .recentCustomers table tr:hover {
-  background: var(--blue);
+  background: var(--primary-color);
   color: var(--white);
 }
 .recentCustomers table tr:hover td h4 span {
